Update and rename product.html to index.html

--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
       </div>
       <div class="row in-mobile-align-center">
         <div class="column col-12" style="border-top: 1px solid lightGray;padding: 50px;">
-          <span>Copyright © 2020 Mobile CAM CNC. All rights reserved.</span>
+          <span id="copy">Copyright © 2020 Mobile CAM CNC. All rights reserved.</span>
           <a href="privacy-policy.html">Privacy Policy</a>
           |<a href="terms.html">  Terms & Conditions</a>
         </div>
       </div>
     </footer>
+    <script>
+      document.getElementById('copy').innerHTML = 'test output';
+    </script>
   </body>
 </html>
